# text-search-tool

./: .gitignore  Cargo.toml
crates/crawler/: Cargo.toml
crates/crawler/src/: lib.rs  login.rs
crates/gui/: Cargo.toml
crates/gui/src/: keyword_editor.rs  keyword_preview.rs  lib.rs  login.rs
crates/search-engine/: Cargo.toml
crates/search-engine/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: district.rs  error.rs  lib.rs  model.rs  paging.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: README.md  ai-agent-dev-and-package.md  development-breakdown-mvp.md  development-setup-and-structure.md  interface-contract-mvp.md  jxemall-district-code-name-map.json  jxemall-district-codes-observed-full-selection.md  jxemall-district-codes-observed-jx-minus-one-county.md  jxemall-district-testcases-confirmed.md  jxemall-filter-ui-mapping.md  jxemall-listnewest-data-profile.md  jxemall-login-request-notes.md  jxemall-query-rule-notes-template.md  prd-mvp.md  project-initiation-draft.md  release-v0.2.md  release-v1.md  rust-type-definitions-mvp.md  storage-poc-sqlite-vs-rocksdb.md  svelte-migration-plan.md  svelte-migration-todo.md  tauri-command-error-mapping-mvp.md  technical-solution-mvp.md
scripts/: package-v1.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: app.db
src-tauri/src/: lib.rs
ui/: app.js  index.html  jxemall-district-options.js  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
ui/src/: App.svelte  main.ts  routes.ts
ui/src/lib/: api.ts  stores.ts
(+4 files in other folders)
