[package]
name = "crawler"
version = "0.2.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
storage = { path = "../storage" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
